Code cleanup (#263)